<resources>
    <string name="app_name">MedCap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vertical_ellipsis"> &#8942;</string>
    <string name="criar_conta_button">Criar uma conta</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="email_login_hint">Seu e-mail</string>
    <string name="senha_login_hint">Senha</string>
    <string name="entrar_login_button">Acessar</string>
    <string name="subtitulo_splash">Lorem ipslon</string>
    <string name="title_activity_cadastro_medico">CadastroMedicoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="medico_choice">Cadastro de Médico</string>
    <string name="cliente_choice">Cadastro de Cliente</string>
    <string name="escolha_text">Qual tipo de cadastro?</string>
    <string name="proximo_button">Próximo</string>
    <string name="anterior_button">Anterior</string>
    <string name="cancelar_button">Cancelar</string>
    <string name="concluir_button">Concluir</string>
    <string name="sim_button">Sim</string>
    <string name="nao_button">Não</string>
    <string name="mensagem_cancelar_cadastro">Deseja Cancelar o Cadastro?</string>
</resources>
